# learn-pytorch

./: .gitignore  README.md  pyproject.toml
lab/: 01_datalab.ipynb  02_linearregression.ipynb  03_linearregression_simple.ipynb  04_softmax_handwritten.ipynb  05_softmax_with_pytorch.ipynb  06_mlp_handwritten.ipynb  07_mlp_with_pytorch.ipynb  08_overfitting.ipynb  09_simple_conv2d.ipynb  11_simple_pool2d.ipynb  12_lenet.ipynb  13_simple_alexnet.ipynb  14_minimum_lightning_example.ipynb  15_lightning_alexnet_mnist.ipynb  16_imagenetdataset.ipynb  17_LT_mlflow.ipynb  18_LT_VGG_mnist.ipynb  19_LT_NIN_mnist.ipynb  20_LT_GoogLeNet_mnist.ipynb  21_batch_normalization.ipynb  22_LT_ResNet_mnist.ipynb  23_LT_ResNet50_ImageNet.ipynb  24_LT_model_export.ipynb  25_image_augmentation.ipynb  26_LT_Resnet50_CIFAR10.ipynb  27_01_LT_AlexNet_CIFAR10.py  27_02_LT_NIN_CIFAR10.py  27_03_LT_GoogLeNet_CIFAR10.py  27_04_LT_VGG_CIFAR10.py  27_05_LT_ResNet50_CIFAR10.py  27_06_Classification_Summary_CIFAR10.ipynb  28_01_LT_transfer_learning_train.py  28_02_Transfer_Learning_Summary.ipynb  29_01_banana_dataset.ipynb  29_02_anchor_box.ipynb  29_03_TinySSD_details.ipynb  29_04_SSD.py  29_04_TinySSD.py  29_05_TinySSD_predict.ipynb  lightning_datasets.py  (+1 more)
lab/data/: house_tiny.csv
lab/neural_networks/: AlexNet.py  GoogLeNet.py  NIN.py  ResNet50.py  VGG.py  __init__.py  tinyssd.py  transfer_resnet50.py
