[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
