[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8>=2.3.2",
    "datasets>=3.6.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0",
    "onnx>=1.18.0",
    "pytorch-lightning>=2.5.1.post0",
    "torch>=2.7.0",
    "torchmetrics>=1.7.2",
    "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
